noinst_LTLIBRARIES = libpixman.la

libpixman_la_SOURCES = \
	pixman.h \
	pixman-remap.h \
	pixman-xserver-compat.h \
	pixregion.c \
	pixregionint.h \
	fbpict.h \
	ic.c \
	icblt.c \
	icbltone.c \
	iccolor.c \
	icformat.c \
	icimage.c \
	icimage.h \
	icint.h \
	icpixels.c \
	icrect.c \
	icrop.h \
	icstipple.c \
	ictrap.c \
	ictransform.c \
	ictri.c \
	icutil.c \
	fbedge.c \
	fbedgeimp.h \
	fbtrap.c \
	fbcompose.c \
	renderedge.c \
	renderedge.h \
	slim_internal.h

INCLUDES = -I$(top_srcdir) -I$(srcdir) $(WARN_CFLAGS)
